--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="/assets/css/styles.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet" data-no-mirror>
+    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&amp;family=Roboto+Slab:wght@400;700&amp;family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&amp;display=swap" rel="stylesheet" data-no-mirror="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/themes/prism.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror></script>
+    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror=""></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@8.4.8/dist/mermaid.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror=""></script>
 
     <title>Shiny.NET - Getting Started</title>
 </head>
@@ -154,7 +152,7 @@
                                                             <a href="/push/aws">AWS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/push/onesignal">One Signal</a>
+                                                            <a href="/push/onesignal">OneSignal</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -231,9 +229,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/httptransfers/advanced">Advanced</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/httptransfers/delegate">Delegate</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -373,7 +368,7 @@
 <tbody>
 <tr>
 <td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Net.Http/" target="Shiny.Net.Http"><img src="https://img.shields.io/nuget/v/Shiny.Net.Http.svg?style=for-the-badge&label=Shiny.Net.Http" /></a></td>
+<td><a href="https://www.nuget.org/packages/Shiny.Net.Http/" target="Shiny.Net.Http"><img src="https://img.shields.io/nuget/v/Shiny.Net.Http.svg?style=for-the-badge&amp;label=Shiny.Net.Http"></a></td>
 </tr>
 <tr>
 <td><strong>Service</strong></td>
@@ -393,7 +388,7 @@
 </tr>
 <tr>
 <td>- <em>iOS</em></td>
-<td>9 ([OS Configuration Required](xref: iOS))</td>
+<td>9 (<a href="/setup/ios">OS Configuration Required</a>)</td>
 </tr>
 <tr>
 <td>- <em>Android</em></td>
@@ -405,6 +400,50 @@
 </tr>
 </tbody>
 </table>
+<h2 id="setup">Setup</h2>
+<ol>
+<li>Create a delegate in your shared code</li>
+</ol>
+<pre><code class="language-csharp">using System;
+using System.Threading.Tasks;
+using Shiny;
+using Shiny.Net.Http;
+
+namespace YourNamespace
+{
+    public class MyHttpTransferDelegate : IHttpTransferDelegate
+    {
+
+        public Task OnError(HttpTransfer transfer, Exception ex) 
+        {
+        }
+
+        public async Task OnCompleted(HttpTransfer transfer)
+        {
+        }
+    }
+}
+
+</code></pre>
+<ol start="2">
+<li>Add the following to your <a href="/setup/startup">Shiny Startup</a></li>
+</ol>
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+services.UseHttpTransfers&lt;YourNamespace.MyHttpTransferDelegate&gt;();
+ 
+        }
+    }
+}
+</code></pre>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
@@ -466,5 +505,5 @@
             }
         });
     </script>
-</body>
-</html>
+
+</body></html>
