--- a/quickstart.html
+++ b/quickstart.html
@@ -1,23 +1,21 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="/assets/css/styles.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet" data-no-mirror>
+    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&amp;family=Roboto+Slab:wght@400;700&amp;family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&amp;display=swap" rel="stylesheet" data-no-mirror="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/themes/prism.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror></script>
+    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror=""></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@8.4.8/dist/mermaid.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror=""></script>
 
     <title>Shiny.NET - Quick Start</title>
 </head>
@@ -154,7 +152,7 @@
                                                             <a href="/push/aws">AWS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/push/onesignal">One Signal</a>
+                                                            <a href="/push/onesignal">OneSignal</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -231,9 +229,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/httptransfers/advanced">Advanced</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/httptransfers/delegate">Delegate</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -375,17 +370,17 @@ namespace YourNamespace
 <p>As another alternative, you can have Shiny generate a startup file automatically at compile time.</p>
 <h3 id="android-ios">Android &amp; iOS</h3>
 <ol>
-<li>The best option is to install the <a href="https://www.nuget.org/packages/Shiny/" target="Shiny"><img src="https://img.shields.io/nuget/v/Shiny.svg?style=for-the-badge" /></a> in your head Android, iOS, and UWP head projects.</li>
+<li>The best option is to install the <a href="https://www.nuget.org/packages/Shiny/" target="Shiny"><img src="https://img.shields.io/nuget/v/Shiny.svg?style=for-the-badge"></a> in your head Android, iOS, and UWP head projects.</li>
 <li>In each head project, add the following anywhere in your project:</li>
 </ol>
 <pre><code class="language-csharp">// NOTE THE USE OF THE FULL TYPE NAME INCLUDING NAMESPACE
 [assembly: Shiny.ShinyApplication(
-    ShinyStartupTypeName = &quot;YourNamespace.YourApp&quot;,
-    XamarinFormsAppTypeName = &quot;YourNamespace.YourXamarinFormsApp&quot;
+    ShinyStartupTypeName = "YourNamespace.YourApp",
+    XamarinFormsAppTypeName = "YourNamespace.YourXamarinFormsApp"
 )]
 </code></pre>
 <ol start="3">
-<li>iOS: Make sure your AppDelegate is marked as a partial class.  If you implement any of the methods in it, consider removing them.  If you have any custom code in them, take a look at [boilerplate](xref: boilerplate) for more custom scenarios</li>
+<li>iOS: Make sure your AppDelegate is marked as a partial class.  If you implement any of the methods in it, consider removing them.  If you have any custom code in them, take a look at <a href="/setup/boilerplate">boilerplate</a> for more custom scenarios</li>
 <li>Android: Consider deleting any Android application classes you have and make sure all of your activities are marked partial.</li>
 </ol>
 <p>Out of the box, Shiny automatically adds all of the services for Jobs, file system, power monitoring, and key/value storage (as well as several other services need by the Shiny internals)</p>
@@ -450,5 +445,5 @@ namespace YourNamespace
             }
         });
     </script>
-</body>
-</html>
+
+</body></html>
